--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
 #header {
   border-bottom: 1px solid #e4e4e4;
   display: flex;
@@ -256,4 +260,40 @@ nav.show .icon-close {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+
+/* ====== ABOUT ====== */
+
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background-color: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  
 }
